--- a/style.css
+++ b/style.css
@@ -10,3 +10,14 @@
 .toptext {
     line-height: 30px;
 }
+
+.listbox {
+    margin-top: 2.5%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.inputbox {
+    margin-top: 2.5%;
+
+}
